--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.17.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
